# pythonProject

./: .gitignore  API_SPEC.md  README.md  agents.config.json  filelist.txt  live_sandbox.html  pyproject.toml  requirements.txt  static_demo.html  test_append.txt  verify_adapter.py  xapi_sandbox.html  xapi_sandbox_demo.html
docs/: analysis_results.md  profile_analytics_plan.md  tasks.md  xapi_specification_and_tool_design.html
sandbox/: live_sandbox.html  static_demo.html
scratch/: check_actors.py  check_actors_2.py  check_actors_3.py  check_html_divs.py  check_lrs_indexes.py  check_top_actor_count.py  count_distinct_accounts.py  db_analytics.py  debug_errors.py  find_div_mismatch.py  inspect_all_dbs.py  inspect_kt_lrs_and_lrs.py  profile_lrs_details.py  profile_lrs_fast.py  profile_lrs_medium.py  profile_lrs_real_vs_test.py  quick_smoke.py  smoke_test.py  smoke_test_real.py  test_diagnostics_perf.py  test_new_analytics.py
src/xapi_tools/: __init__.py  cli.py  web_app.py
src/xapi_tools/adapter/: __init__.py  canonical_model.py  mapping_engine.py
src/xapi_tools/analytics/: __init__.py  applied.py  assessment.py  common.py  media.py  navigation.py  session.py  utils.py
src/xapi_tools/session_validator/: cli.py  main.py
src/xapi_tools/session_validator/core/: loader.py  logging_setup.py  monthly_aggregate.py  (+1 more)
src/xapi_tools/utils/: actor.py  db.py  pandas_helper.py
tests/: test_actor.py
tests/analytics/: test_applied.py  test_assessment.py  test_churn.py  test_frustration.py  test_media.py  test_navigation.py  test_session.py
tools/: xapi_api.http
(+63 files in other folders)
