[project]
name = "xapi-tools"
version = "0.1.0"
description = "Comprehensive xAPI data manipulation and validation tools"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.21.1",
]

[project.scripts]
xapi-tools = "xapi_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xapi_tools"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
